--- a/src/js/directives/dagNavBar/dagNavBar.template.html
+++ b/src/js/directives/dagNavBar/dagNavBar.template.html
@@ -4,7 +4,7 @@
             <svg-icon name="arrow_back" class="back-button"></svg-icon>
         </span>
 
-        <span ng-click="openMenu()" ng-show="!showBack">
+        <span ng-click="openSideBar('left')" ng-show="!showBack">
             <svg-icon name="menu2"></svg-icon>
         </span>
     </div>
