--- a/public/index.html
+++ b/public/index.html
@@ -15,47 +15,39 @@
 </head>
 <body ng-cloak class="ng-cloak">
 
-  <div class="page"
-    ng-controller="indexController as index"
-    ng-swipe-disable-mouse
-    ng-swipe-left="index.closeMenu()"
-    ng-swipe-right="index.swipeRight()">
+<div class="page"
+     ng-controller="indexController as index"
+     ng-swipe-disable-mouse>
 
-    <div class="off-canvas-wrap" id="off-canvas-wrap">
-      <div class="inner-wrap">
-        <div ng-include="'views/includes/sidebar.html'" ng-if="index.hasProfile"></div>
+  <div class="off-canvas-wrap" id="off-canvas-wrap">
+    <div class="inner-wrap">
+      <dag-side-bar side="left">
+        <dag-side-menu></dag-side-menu>
+      </dag-side-bar>
 
-<!--        <dag-side-bar ng-if="index.hasProfile">
-          <dag-side-menu></dag-side-menu>
-        </dag-side-bar>-->
-
-        <div notifications="right top"></div>
-        <div ng-include="'views/includes/password.html'" ng-if="index.askPassword"></div>
-        <div ng-include="'views/includes/alert.html'" ng-if="index.showAlert"></div>
-        <div id="sectionContainer">
-          <div id="mainSection">
-            <section ui-view="main"
-                     ng-class="{
-            'main': index.hasProfile
-            }" ng-show="!index.$state.includes('correspondentDevices')"></section>
-            <div ui-view="chat" ng-show="index.$state.includes('correspondentDevices')" class="main" style="overflow: auto;"></div>
-          </div>
+      <div notifications="right top"></div>
+      <div ng-include="'views/includes/password.html'" ng-if="index.askPassword"></div>
+      <div ng-include="'views/includes/alert.html'" ng-if="index.showAlert"></div>
+      <div id="sectionContainer">
+        <div id="mainSection">
+          <section ui-view="main" ng-class="{'main': index.hasProfile }" ng-show="!index.$state.includes('correspondentDevices')"></section>
+          <div ui-view="chat" ng-show="index.$state.includes('correspondentDevices')" class="main"
+               style="overflow: auto;"></div>
         </div>
-        <a class="close-menu" ng-click="index.closeMenu()"></a>
-
       </div>
     </div>
   </div>
-  <script>console.log("starting scripts...");</script>
-  <script src="angular.js"></script>
+</div>
+<script>console.log("starting scripts...");</script>
+<script src="angular.js"></script>
 
-  <!-- DO NOT DELETE THIS COMMET  -->
-  <!-- PLACEHOLDER: CORDOVA SRIPT -->
+<!-- DO NOT DELETE THIS COMMET  -->
+<!-- PLACEHOLDER: CORDOVA SRIPT -->
 
-  <script src="config.js" type="application/javascript"></script>
-  <script src="dagcoin.js" type="application/javascript"></script>
-  <script src="templates.js" type="application/javascript"></script>
-  <script>console.log("done scripts");</script>
+<script src="config.js" type="application/javascript"></script>
+<script src="dagcoin.js" type="application/javascript"></script>
+<script src="templates.js" type="application/javascript"></script>
+<script>console.log("done scripts");</script>
 
 </body>
 </html>
