Device service, Wallets service, side menu

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" type="text/css" href="css/vendors.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/foundation.css">
   <link rel="stylesheet" type="text/css" href="icons/foundation-icons.css">
   <link rel="stylesheet" type="text/css" href="css/dagcoin.css">
