--- a/src/js/controllers/contacts/contacts.template.html
+++ b/src/js/controllers/contacts/contacts.template.html
@@ -13,48 +13,41 @@
     <p>Press "+" in the right upper corner to add your first contact.</p>
   </div>
   <dag-tabset ng-if="contacts.listTotal">
-    <dag-tab heading="{{ 'contacts' | translate }}" tab-click="contacts.clearFilter()">
-      <!--<div class="contacts_search_bar">
+    <dag-tab heading="{{ 'contacts' | translate }}" tab-click="contacts.changeTab('contacts')">
+      <div class="contacts_search_bar">
         <svg-icon name="search2"></svg-icon>
         <svg-icon name="cancel" class="clear_icon" ng-click="contacts.clearFilter()"></svg-icon>
         <input class="contacts_search_bar_input" type="text" name="search" ng-change="contacts.filterList()"
                ng-model="contacts.search"
                placeholder="{{ 'Search' | translate}}">
-      </div>-->
+      </div>
 
-      <div class="contacts_list">
+      <div class="contacts_list animated" ng-class="{'fadeOutDown' : contacts.search !== ''}">
         <div ng-repeat="(letter, list) in contacts.list">
           <h4 class="contacts_list_letter">{{letter}}</h4>
-          <table>
-            <tbody>
-            <tr ng-repeat="contact in list">
-              <td class="contacts_list_contact_info">
-                <div class="avatar"></div>
-                <a class="contacts_list_contact_info_full_name" ui-sref="contact({address: '{{contact.address}}'})">{{contact.first_name}}
-                  {{contact.last_name}}</a>
-                <div class="contacts_list_contact_info_email">{{contact.email}}</div>
-              </td>
-              <td class="contacts_list_contact_favorite" ng-click="contacts.toggleFavorite(contact)">
-                <div class="contacts_list_contact_favorite_trigger" ng-class="{'selected' : contact.favorite}">
-                  <svg-icon name="star"></svg-icon>
-                  <svg-icon name="star_border"></svg-icon>
-                </div>
-              </td>
-            </tr>
-            </tbody>
-          </table>
+          <div class="contacts_list_table">
+            <table>
+              <tbody>
+              <tr ng-repeat="contact in list">
+                <td class="contacts_list_contact_info">
+                  <div class="avatar"></div>
+                  <a class="contacts_list_contact_info_full_name" ui-sref="contact({address: '{{contact.address}}'})">{{contact.first_name}}
+                    {{contact.last_name}}</a>
+                </td>
+                <td class="contacts_list_contact_favorite" ng-click="contacts.toggleFavorite(contact)">
+                  <div class="contacts_list_contact_favorite_trigger" ng-class="{'selected' : contact.favorite}">
+                    <svg-icon name="star"></svg-icon>
+                    <svg-icon name="star_border"></svg-icon>
+                  </div>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </dag-tab>
-    <dag-tab heading="{{ 'favorites' | translate }}" tab-click="contacts.clearFilter()">
-      <!--<div class="contacts_search_bar">
-        <svg-icon name="search2"></svg-icon>
-        <svg-icon name="cancel" class="clear_icon" ng-click="contacts.clearFilter()"></svg-icon>
-        <input class="contacts_search_bar_input" type="text" name="search" ng-change="contacts.filterList()"
-               ng-model="contacts.search"
-               placeholder="{{ 'Search' | translate}}">
-      </div>-->
-
+    <dag-tab heading="{{ 'favorites' | translate }}" tab-click="contacts.changeTab('favorites')">
       <div class="contacts_list" ng-if="contacts.favoriteListTotal">
         <div ng-repeat="(letter, list) in contacts.favoriteList">
           <h4 class="contacts_list_letter">{{letter}}</h4>
