updated styles for contact info

--- a/src/js/controllers/contacts/contact/contact.template.html
+++ b/src/js/controllers/contacts/contact/contact.template.html
@@ -38,7 +38,7 @@
           <div class="contact_info_key" translate>description</div>
           <div class="contact_info_value">{{contact.data.description}}</div>
         </li>
-        <li>
+        <li class="contact_action">
           <button class="btn btn_red-full" ng-click="contact.sendPayment()" translate>
             <span class="ng-scope">Send</span>
           </button>
